--- a/OqtaneTemplateGenerator.App/OqtaneTemplateGenerator.App.csproj
+++ b/OqtaneTemplateGenerator.App/OqtaneTemplateGenerator.App.csproj
@@ -32,4 +32,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="9.0.6" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="assets\" />
+  </ItemGroup>
 </Project>
