--- a/OqtaneTemplateGenerator.App/OqtaneTemplateGenerator.App.csproj
+++ b/OqtaneTemplateGenerator.App/OqtaneTemplateGenerator.App.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <AssemblyName>OqtaneTemplateGenerator</AssemblyName>
     <ApplicationIcon>OqtaneTemplateGenerator.ico</ApplicationIcon>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Product>Oqtane Template Generator</Product>
     <Company>2sic internet solutions GmbH, Switzerland</Company>
     <CopyRight>Copyright MIT © 2sic 2025</CopyRight>
@@ -15,6 +15,13 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PublishDir>publish</PublishDir>
     <LangVersion>preview</LangVersion>
+    <PublishTrimmed>True</PublishTrimmed>
+    <PublishAot>True</PublishAot>
+    <PackageProjectUrl>https://cre8magic.blazor-cms.org/magic-tools/template-generator/index.html</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <RepositoryUrl>https://github.com/cre8magic/oqtane-template-generator</RepositoryUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackAsTool>True</PackAsTool>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <PublishTrimmed>true</PublishTrimmed>
@@ -28,6 +35,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="OqtaneTemplateGenerator.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\docs\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="9.0.6" />
