Update settings and template properties

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "cSpell.words": [
         "Oqtane"
-    ]
+    ],
+    "workbench.editor.customLabels.patterns": {
+        "*.json": "jsonc"
+    },
+    "files.associations": {
+        "*.json": "jsonc"
+    }
 }
