--- a/Cre8magicTransformer.Tests/Cre8magicTransformer.Tests.csproj
+++ b/Cre8magicTransformer.Tests/Cre8magicTransformer.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OqtaneTemplateGenerator.App\OqtaneTemplateGenerator.App.csproj" />
+    <ProjectReference Include="..\Cre8magicTransformer.App\Cre8magicTransformer.App.csproj" />
   </ItemGroup>
 
 </Project>
