--- a/Cre8magicTransformer.App/Cre8magicTransformer.App.csproj
+++ b/Cre8magicTransformer.App/Cre8magicTransformer.App.csproj
@@ -6,14 +6,14 @@
     <Nullable>enable</Nullable>
     <AssemblyName>cre8magicTransformer</AssemblyName>
     <ApplicationIcon>assets\logo-400.ico</ApplicationIcon>
-    <Version>0.1.0</Version>
+    <Version>1.0.0</Version>
     <Product>cre8magicTransformer</Product>
     <Company>2sic internet solutions GmbH, Switzerland</Company>
     <CopyRight>Copyright MIT © 2sic 2025</CopyRight>
     <Title>cre8magicTransformer</Title>
     <Description>Oqtane Template / Module generator and Template to Theme / Module converter</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PublishDir>publish</PublishDir>
+    <PublishDir>..\publish\</PublishDir>
     <LangVersion>preview</LangVersion>
     <PublishTrimmed>True</PublishTrimmed>
     <PublishAot>True</PublishAot>
@@ -31,7 +31,6 @@
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-    <TrimmerDefaultAction>link</TrimmerDefaultAction>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="assets\logo-400.ico" />
